==> KMAGooner2210/Student-Attendance-Management-System/ssd1306.c <==
#include"ssd1306.h"
#include"i2c.h"
#define SSD1306_WRITECOMMAND(command)      SSD1306_I2C_Write(SSD1306_I2C_ADDR, 0x00, (command))
#define SSD1306_WRITEDATA(data)            SSD1306_I2C_Write(SSD1306_I2C_ADDR, 0x40, (data))
#define ABS(x)   ((x) > 0 ? (x) : -(x))
#define SSD1306_RIGHT_HORIZONTAL_SCROLL              0x26	// Cuon phai
#define SSD1306_LEFT_HORIZONTAL_SCROLL               0x27 // Cuon trai
#define SSD1306_VERTICAL_AND_RIGHT_HORIZONTAL_SCROLL 0x29 // Cuon nghieng sang phai + doc
#define SSD1306_VERTICAL_AND_LEFT_HORIZONTAL_SCROLL  0x2A // Cuon nghieng sang trai + doc
#define SSD1306_DEACTIVATE_SCROLL                    0x2E // Dung cuon
#define SSD1306_ACTIVATE_SCROLL                      0x2F // Bat dau cuon
#define SSD1306_SET_VERTICAL_SCROLL_AREA             0xA3 // Thiet lap vung cuon
#define SSD1306_NORMALDISPLAY       0xA6		// nen den chu trang
#define SSD1306_INVERTDISPLAY       0xA7		// nen trang chu den

void SSD1306_I2C_WriteMulti(uint8_t address, uint8_t reg, uint8_t* data, uint16_t count) {
    __IO uint32_t timeout = 1000;

    I2C_GenerateSTART(I2C1, ENABLE);
    while (!I2C_CheckEvent(I2C1, I2C_EVENT_MASTER_MODE_SELECT)) {
        if ((timeout--) == 0) return;
    }

    I2C_Send7bitAddress(I2C1, address, I2C_Direction_Transmitter);
    timeout = 1000;
    while (!I2C_CheckEvent(I2C1, I2C_EVENT_MASTER_TRANSMITTER_MODE_SELECTED)) {
        if ((timeout--) == 0) return;
    }

    I2C_SendData(I2C1, reg);
    timeout = 1000;
    while (!I2C_CheckEvent(I2C1, I2C_EVENT_MASTER_BYTE_TRANSMITTING)) {
        if ((timeout--) == 0) return;
    }

    for (uint16_t i = 0; i < count; i++) {
        I2C_SendData(I2C1, data[i]);
        timeout = 1000;
        while (!I2C_CheckEvent(I2C1, I2C_EVENT_MASTER_BYTE_TRANSMITTED)) {
            if ((timeout--) == 0) return;
        }
    }

    I2C_GenerateSTOP(I2C1, ENABLE);
}

void SSD1306_I2C_Write(uint8_t address, uint8_t reg, uint8_t data) {
    __IO uint32_t timeout = 1000;

   
    I2C_GenerateSTART(I2C1, ENABLE);
    while (!I2C_CheckEvent(I2C1, I2C_EVENT_MASTER_MODE_SELECT)) {
        if ((timeout--) == 0) return;
    }

    
    I2C_Send7bitAddress(I2C1, address, I2C_Direction_Transmitter);
    timeout = 1000;
    while (!I2C_CheckEvent(I2C1, I2C_EVENT_MASTER_TRANSMITTER_MODE_SELECTED)) {
        if ((timeout--) == 0) return;
    }

  
    I2C_SendData(I2C1, reg);
    timeout = 1000;
    while (!I2C_CheckEvent(I2C1, I2C_EVENT_MASTER_BYTE_TRANSMITTING)) {
        if ((timeout--) == 0) return;
    }

   
    I2C_SendData(I2C1, data);
    timeout = 1000;
    while (!I2C_CheckEvent(I2C1, I2C_EVENT_MASTER_BYTE_TRANSMITTED)) {
        if ((timeout--) == 0) return;
    }

    
    I2C_GenerateSTOP(I2C1, ENABLE);
}
